# ChineseOfficialMahjongHelper

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  BaseLayer.h  BaseScene.h  HelloWorldScene.cpp  HelloWorldScene.h  PointsCalculatorScene.cpp  PointsCalculatorScene.h  TilesImage.h  UIColors.h  UICommon.h  common.h  compiler.h
Classes/Competition/: Competition.cpp  Competition.h  CompetitionEnrollScene.cpp  CompetitionEnrollScene.h  CompetitionEnterScene.cpp  CompetitionEnterScene.h  CompetitionMainScene.cpp  CompetitionMainScene.h  CompetitionRankCustomScene.cpp  CompetitionRankCustomScene.h  CompetitionRoundScene.cpp  CompetitionRoundScene.h  CompetitionTableScene.cpp  CompetitionTableScene.h
Classes/CompetitionSystem/: Competition.cpp  Competition.h  CompetitionEnrollScene.cpp  CompetitionEnrollScene.h  CompetitionHistoryScene.cpp  CompetitionHistoryScene.h  CompetitionMainScene.cpp  CompetitionMainScene.h  CompetitionRankCustomScene.cpp  CompetitionRankCustomScene.h  CompetitionRoundScene.cpp  CompetitionRoundScene.h  CompetitionTableScene.cpp  CompetitionTableScene.h  EditBoxDelegateWrapper.hpp  LatestCompetitionScene.cpp  LatestCompetitionScene.h
Classes/FanCalculator/: FanCalculatorScene.cpp  FanCalculatorScene.h
Classes/FanTable/: FanDefinition.cpp  FanDefinition.h  FanDefinitionScene.cpp  FanDefinitionScene.h  FanTable.cpp  FanTable.h  FanTableScene.cpp  FanTableScene.h
Classes/LatestCompetition/: LatestCompetitionScene.cpp  LatestCompetitionScene.h
Classes/MahjongTheory/: MahjongTheoryScene.cpp  MahjongTheoryScene.h
Classes/MainMenu/: LeftSideMenu.cpp  LeftSideMenu.h
Classes/Other/: OtherScene.cpp  OtherScene.h
Classes/PointsCalculator/: PointsCalculatorScene.cpp  PointsCalculatorScene.h
Classes/RecordSystem/: LittleFan.h  Record.cpp  Record.h  RecordHistoryScene.cpp  RecordHistoryScene.h  RecordScene.cpp  RecordScene.h  ScoreSheetScene.cpp  ScoreSheetScene.h
Classes/ScoreSheet/: HistoryScene.cpp  HistoryScene.h  Record.cpp  Record.h  RecordScene.cpp  RecordScene.h  ScoreSheetScene.cpp  ScoreSheetScene.h
Classes/ScoreTable/: ScoreDefinition.cpp  ScoreDefinition.h  ScoreTable.cpp  ScoreTable.h
Classes/Training/: TrainingScene.cpp  TrainingScene.h
Classes/cocos-wheels/: CWCommon-android.cpp  CWCommon-ios.mm  CWCommon-mac.mm  CWCommon-win32.cpp  CWCommon.cpp  CWCommon.h  CWTableView.cpp  CWTableView.h
Classes/mahjong-algorithm/: CHANGELOG  LICENSE  README.md  fan_calculator.cpp  fan_calculator.h  points_calculator.cpp  points_calculator.h  shanten.cpp  shanten.h  standard_tiles.h  stringify.cpp  stringify.h  tile.h  unit_test.cpp  wait_and_win.cpp  wait_and_win.h  wait_and_win_test.cpp  wait_and_win_test.h
Classes/utils/: calendar.h  common.cpp  common.h  compiler.h  fsstring.h  socket.cpp  socket.h  to_string.h
Classes/wheels/: cppJSON.hpp  unit_test.cpp
Classes/widget/: AlertDialog.cpp  AlertDialog.h  AlertLayer.cpp  AlertLayer.h  AlertView.cpp  AlertView.h  CWEditBoxDelegate.h  CWTableView.cpp  CWTableView.h  CheckBoxScale9.cpp  CheckBoxScale9.h  CommonWebViewScene.cpp  CommonWebViewScene.h  DatePicker.cpp  DatePicker.h  ExtraInfoWidget.cpp  ExtraInfoWidget.h  HandTilesWidget.cpp  HandTilesWidget.h  LoadingView.h  PopupMenu.cpp  PopupMenu.h  TilePickWidget.cpp  TilePickWidget.h  TilesKeyboard.cpp  TilesKeyboard.h  Toast.cpp  Toast.h  calendar-inline.h
Resources/: other.xml  score_definition.xml  score_principles.xml
Resources/text/: CHANGELOG  other.xml  puzzles.txt  score_definition.xml  score_principles.xml
cocos2d_improvements/: README.md
cocos2d_improvements/cocos/: Android.mk  CMakeLists.txt
cocos2d_improvements/cocos/2d/: CCCamera.cpp  CCCamera.h  CCLabel.cpp  libcocos2d.vcxproj  libcocos2d.vcxproj.filters
cocos2d_improvements/cocos/base/: ccUTF8.cpp  ccUTF8.h
cocos2d_improvements/cocos/platform/android/: CCGLViewImpl-android.cpp
cocos2d_improvements/cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxBitmap.java  Cocos2dxEditBoxHelper.java  Cocos2dxGLSurfaceView.java
cocos2d_improvements/cocos/platform/android/jni/: JniHelper-inl.h  JniHelper.cpp  JniHelper.h
cocos2d_improvements/cocos/platform/ios/: CCEAGLView-ios.mm
cocos2d_improvements/cocos/renderer/: CCTexture2D.cpp
cocos2d_improvements/cocos/ui/: UIWebViewImpl-ios.mm
cocos2d_improvements/cocos/ui/UIEditBox/: UIEditBoxImpl-common.cpp
cocos2d_improvements/extensions/: Android.mk  CMakeLists.txt
docs/: almanac.html  divination.html
docs/js/: tz-chn-cal.js
proj.android/: AndroidManifest.xml  android改非全屏说明.txt  build.gradle
proj.android-eclipse/: AndroidManifest.xml  build.xml
proj.android-eclipse/jni/: Android.mk
proj.android-eclipse/res/values/: strings.xml
proj.android-eclipse/src/org/cocos2dx/cpp/: AppActivity.java
proj.android-studio/: settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/jni/: Android.mk
proj.android-studio/app/res/values/: strings.xml
proj.android-studio/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk  Application.mk
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.android/jni/: Android.mk
proj.android/res/values/: strings.xml
proj.ios_mac/ChineseOfficialMahjongHelper.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: AppController.mm  Info.plist  LaunchScreen.storyboard  RootViewController.h  RootViewController.mm
proj.ios_mac/mac/: Icon.icns  Info.plist
proj.win10/: ChineseOfficialMahjongHelper.sln
proj.win10/App/: ChineseOfficialMahjongHelper.vcxproj  ChineseOfficialMahjongHelper.vcxproj.filters  Package.appxmanifest
proj.win32/: ChineseOfficialMahjongHelper.sln  ChineseOfficialMahjongHelper.vcxproj  ChineseOfficialMahjongHelper.vcxproj.filters  game.rc  main.cpp
